--- a/views/cards/show.ejs
+++ b/views/cards/show.ejs
@@ -27,7 +27,7 @@
 
 <body class="d-flex flex-column vh-100">
   <%- include('../partials/navbar') %>
-    <nav class="navbar bg-white shadow">
+    <nav class="navbar bg-white" style="border-bottom: 1px solid #EEEEEE;">
       <div class="container">
         <ul class="navbar-nav">
           <li><a href="/category/<%= card.category %>" class="back-link"><i
