--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -115,6 +115,60 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-3 mb-3 pt-3">
+            <div class="card stats p-3">
+                <h5 class="mb-3">Kartičky a balíčky</h5>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Kartiček zdarma</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= cardsFreeCount %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Kartiček v předplatném</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= cardsPremiumCount %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-9">
+                        <p>Kartiček zdarma</p>
+                    </div>
+                    <div class="col-md-3">
+                        <%= freeCardRatio %> %
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Balíčky zdarma</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sectionsFreeCount %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Balíčky v předplatném</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sectionsPremiumCount %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-9">
+                        <p>Balíčků zdarma</p>
+                    </div>
+                    <div class="col-md-3">
+                        <%= freeSectionRatio %> %
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
     <div class="row">
