--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -86,6 +86,7 @@
                 </div>
                 <div class="d-flex flex-column justify-content-center align-items-center">
                     <p class=" text-center w-custom-80 p-3 pb-5">Předplatné je automaticky měsíčně nebo ročně (dle typu předplatného) strháváno z tvého účtu. <b>Zrušit jej můžeš kdykoliv.</b></p>
+                    <a href="#" id="checkout-button-daily" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
                 </div>
             </div>
           </section>
