--- a/views/payments/success.ejs
+++ b/views/payments/success.ejs
@@ -3,6 +3,11 @@
     <div class="row">
         <div class="col-md-6 col-12 offset-md-3">
             <div class="card text-center p-4">
+                <% if(currentUser.isPremium) %>
+                    <h3>Předplatné prodlouženo</h3>
+                <% } else { %>
+                    <h3>Předplatné aktivováno</h3>
+                <% } %>
                 <h3>Předplatné aktivováno</h3>
                 <p class="my-4"><i class="fas fa-check-circle green-check"></i></p>
                 <h5>Děkujeme!</h5>
