--- a/views/partials/cookiesBar.ejs
+++ b/views/partials/cookiesBar.ejs
@@ -1,5 +1,5 @@
 <% if(cookiesAgreed !== true && !currentUser){ %>
-    <div class="cookies-warning">
+    <div class="cookies-warning" id="cookies-warning">
         <p class="">
             InLege vyžaduje pro správné fungování cookies. Užitím webu souhlasíte s užitím cookies. | <a href="/legal/gdpr">Více informací</a>
         </p>
