--- a/views/premium.ejs
+++ b/views/premium.ejs
@@ -50,7 +50,7 @@
                         <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
                         <div class="px-3 d-flex justify-content-center">
                             <% if (!currentUser) { %>
-                                <a href="/auth/user/new?premium=true" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                                <a href="/auth/user/new?premium=true" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
                             <% } %>
                             <% if (currentUser && !currentUser.isPremium) { %>
                                 <a href="#" id="checkout-button-monthly" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
@@ -73,7 +73,7 @@
                         <p class="text-center mt-1 mb-2" style="font-size:0.8rem">funkce ukládání<br> kartiček</p>
                         <div class="px-3 d-flex justify-content-center">
                             <% if (!currentUser) { %>
-                                <a href="/auth/user/new?premium=true" class="btn btn-danger my-3">Zaregistrovat se a aktivovat</a> 
+                                <a href="/auth/user/new?premium=true" class="btn btn-lg btn-danger my-3">Zaregistrovat se a aktivovat</a> 
                             <% } %>
                             <% if (currentUser && !currentUser.isPremium) { %>
                                 <a href="#" id="checkout-button-yearly" class="btn btn-lg btn-danger my-3" style="min-width:115px">Aktivovat</a> 
