--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -30,7 +30,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-12">
-                            <a href="/category/<%= category%>/section/<%= section._id%>/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
+                            <a href="/category/<%= category%>/section/<%= section._id%>/cardAjax/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
                             <a href="/category/<%= category%>/" class="btn btn-lg btn-danger mb-4">Zpět na kategorii</a>
                         </div>
                     </div>
@@ -48,10 +48,10 @@
                                 <div class="d-flex justify-content-center align-items-center">
                                     <p class="mb-4 grey-highlight px-3 py-2">Navazující balíček je přístupný jen <br>s <b>předplatným Premium</b>.</p>
                                 </div>
-                                <a href="/category/<%= category%>/section/<%= section._id%>/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
+                                <a href="/category/<%= category%>/section/<%= section._id%>/cardAjax/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
                                 <a href="/premium" class="btn btn-lg btn-danger mb-4">Zjistit více</a>
                             <% } else { %>
-                                <a href="/category/<%= category%>/section/<%= section._id%>/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
+                                <a href="/category/<%= category%>/section/<%= section._id%>/cardAjax/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
                                 <a href="/category/<%= category%>/section/<%= section.nextSection%>/1" class="btn btn-lg btn-danger mb-4">Pokračovat na další balíček</a>
                             <% } %>
                         </div>
