--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -52,7 +52,7 @@
                                 <a href="/premium" class="btn btn-lg btn-danger mb-4">Zjistit více</a>
                             <% } else { %>
                                 <a href="/category/<%= category%>/section/<%= section._id%>/cardAjax/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
-                                <a href="/category/<%= category%>/section/<%= section.nextSection%>/1" class="btn btn-lg btn-danger mb-4">Pokračovat na další balíček</a>
+                                <a href="/category/<%= category%>/section/<%= section.nextSection%>/cardAjax/1" class="btn btn-lg btn-danger mb-4">Pokračovat na další balíček</a>
                             <% } %>
                         </div>
                         <div class="col-12">
