--- a/views/category.ejs
+++ b/views/category.ejs
@@ -13,7 +13,7 @@
                     <div class="col-lg-4 p-3 d-flex justify-content-around align-items-center">
                         <a class="btn btn-danger" href="/auth/user/new">Zaregistrovat se</a>
                         <% if(demoCat.basicSections.length > 0){ %> 
-                            <a class="btn btn-outline-danger" href="/category/demo/section/<%= demoCat.basicSections[0]%>/cardAJax/1">Vyzkoušet demo</a>
+                            <a class="btn btn-outline-danger" href="/category/demo/section/<%= demoCat.basicSections[0]%>/1">Vyzkoušet demo</a>
                         <% } %>
                     </div>
                 </div>
@@ -78,18 +78,18 @@
                         <div class="col-3 d-flex justify-content-center align-items-center">
                             <% if (!currentUser){ %> 
                                 <% if(!section.isPremium){ %> 
-                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/1" class="btn btn-sm btn-danger disabled">Zdarma po registraci</a>    
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger disabled">Zdarma po registraci</a>    
                                 <% } else { %>
                                     <a href="/premium" class="btn btn-sm btn-warning disabled" style="float:right">Premium</a>
                                 <% } %>  
                             <% } else if(!currentUser.isPremium && section.isPremium){ %> 
                                 <a href="/premium" class="btn btn-sm btn-warning disabled" style="float:right">Premium</a>
                             <% } else if(currentUser.sections.includes(section._id)) { %> 
-                                <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/repeatSection" class="btn btn-sm btn-outline-danger" style="float:right">Opakovat</a>
+                                <a href="/category/<%= category.name %>/section/<%= section._id %>/repeatSection" class="btn btn-sm btn-outline-danger" style="float:right">Opakovat</a>
                             <% } else if (section.isUnfinished) { %> 
-                                <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/<%= section.lastSeenCard %>?continue=continue" class="btn btn-sm btn-outline-secondary" style="float:right">Pokračovat</a>
+                                <a href="/category/<%= category.name %>/section/<%= section._id %>/<%= section.lastSeenCard %>" class="btn btn-sm btn-outline-secondary" style="float:right">Pokračovat</a>
                             <% } else { %> 
-                                <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/1" class="btn btn-sm btn-danger" style="float:right">Spustit</a>
+                                <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger" style="float:right">Spustit</a>
                             <% } %>
                         </div>
                         <div class="col-2">
@@ -147,13 +147,13 @@
                             </div>
                             <div class="col-3 d-flex justify-content-center align-items-center">
                                 <% if (!currentUser){ %> 
-                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/1" class="btn btn-sm btn-danger disabled">Zdarma po registraci</a>
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger disabled">Zdarma po registraci</a>
                                 <% } else if(currentUser.sections.includes(section._id)) { %> 
-                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/repeatSection" class="btn btn-sm btn-outline-danger" style="float:right">Opakovat</a>
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/repeatSection" class="btn btn-sm btn-outline-danger" style="float:right">Opakovat</a>
                                 <% } else if (section.isUnfinished) { %> 
-                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/<%= section.lastSeenCard %>?continue=continue" class="btn btn-sm btn-outline-secondary" style="float:right">Pokračovat</a>
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/<%= section.lastSeenCard %>" class="btn btn-sm btn-outline-secondary" style="float:right">Pokračovat</a>
                                 <% } else { %> 
-                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/cardAjax/1" class="btn btn-sm btn-danger" style="float:right">Spustit</a>
+                                    <a href="/category/<%= category.name %>/section/<%= section._id %>/1" class="btn btn-sm btn-danger" style="float:right">Spustit</a>
                                 <% } %>
                             </div>
                             <div class="col-2 d-flex justify-content-evenly align-items-center">
