--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -86,7 +86,8 @@
                   <div class="card-text m-4" id="pageB"><%- card.pageB %></div>
                 </div>
                 <div class="back-menu d-flex justify-content-between align-items-center">
-                  <a href="" id="rotate-back-rendered"><i class="fas fa-sync-alt fa-lg"></i></a>
+                  <span href="" id="rotate-back-rendered" class="nezobrazovat-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></span>
+                  <div class="zobrazovat-jen-na-mobilu" style="min-width: 14px;"></div>
                   <div>
                     <% if(sectionLength + 1 !== nextNum){ %>
                       <a href="/category/<%=card.category%>/section/<%=card.section%>/cardAjax/<%= nextNum %>" class="btn btn-lg btn-danger easy-btn" id="btn-dalsi-rendered">Další</a>
