--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -86,7 +86,7 @@
                   <div class="card-text m-4" id="pageB"><%- card.pageB %></div>
                 </div>
                 <div class="back-menu d-flex justify-content-between align-items-center">
-                  <span href="" id="rotate-back-rendered" class="nezobrazovat-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></span>
+                  <span id="rotate-back-rendered" class=""><i class="fas fa-sync-alt fa-lg"></i></span>
                   <div class="zobrazovat-jen-na-mobilu" style="min-width: 14px;"></div>
                   <div>
                     <% if(sectionLength + 1 !== nextNum){ %>
@@ -173,7 +173,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card.js"></script>
+      <script src="/js/card.js?lll"></script>
 </body>
 
 </html>
