--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -86,7 +86,7 @@
                   <div class="card-text m-4" id="pageB"><%- card.pageB %></div>
                 </div>
                 <div class="back-menu d-flex justify-content-between align-items-center">
-                  <span id="rotate-back-rendered" class=""><i class="fas fa-sync-alt fa-lg"></i></span>
+                  <span id="rotate-back-rendered" class="nezobrazovat-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></span>
                   <div class="zobrazovat-jen-na-mobilu" style="min-width: 14px;"></div>
                   <div>
                     <% if(sectionLength + 1 !== nextNum){ %>
@@ -133,11 +133,12 @@
       </div>
       <div class="row">
         <div class="col-lg-5 offset-lg-2">
-          <div class="text-center mt-4 servis-btns d-flex justify-content-center align-items-center">
+          <div class="text-center mt-4 servis-btns d-flex justify-content-around align-items-center">
             <% if (currentUser && currentUser.admin) { %>
               <a href="/cards/edit/<%= card._id%>" class="text-muted">Upravit kartu</a>
               <a href="/cards/remove/<%= card._id%>" class="text-muted mx-3">Odstranit kartu</a>
               <% } %>
+                <p id="predchozi-karticka-link" name="/category/<%= card.category %>/section/<%= card.section %>/cardAjax/<%= 0 %>" class="text-muted px-3 mb-0">Předchozí kartička</p>
                 <a href="/cards/report/<%= card._id%>" target="_blank" class="text-muted">Nahlásit chybu</a>
                 <p class="text-muted mb-0 px-3 nezobrazovat-na-mobilu">Otáčej [mezerníkem]</p>
           </div>
