--- a/public/css/card.css
+++ b/public/css/card.css
@@ -129,6 +129,9 @@
 #rotate-back-rendered {
   color: #E80F88;
   cursor: pointer;
+  zoom: 120%;
+  height: 100%;
+  min-width: 40px;
 }
 
 #rotate-back-mobile,
@@ -136,6 +139,8 @@
   color: #E80F88;
   cursor: pointer;
   zoom: 120%;
+  height: 100%;
+  min-width: 40px;
 }
 
 #predchozi-karticka-link {
@@ -144,8 +149,9 @@
 
 .save-star {
     color: #E80F88;
-    height: 20px;
-    width: 20px;
+    height: 100%;
+    min-width: 40px;
+    zoom: 120%;
 }
 
 .spinner-border-small {
@@ -177,6 +183,14 @@
     .save-star {
       zoom: 120%;
     }
+
+    #rotate-back-mobile,
+    #rotate-back-mobile-rendered,
+    .save-star {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+}
   }
 
   @media only screen and (min-width: 992px) {
@@ -185,6 +199,13 @@
     }
     .mobile-btn {
         width: 10rem;
+    }
+    #rotate-back,
+    #rotate-back-rendered,
+    .save-star {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
