--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/bootstrap_customised.css">
   <link rel="stylesheet" href="/css/custom.css">
-  <link rel="stylesheet" href="/css/card.css?clo">
+  <link rel="stylesheet" href="/css/card.css?cl">
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -64,7 +64,7 @@
 
 
         <!--FLIPCARD-->
-        <div class="col-lg-5 offset-lg-2 mb-3">
+        <div class="col-lg-6 offset-lg-2 mb-3">
           <div class="flip-card" id="flip-card">
             <div class="border-grey flip-card-inner">
               <div class="card-body flip-card-front pb-0">
@@ -86,7 +86,7 @@
                   <div class="card-text m-4" id="pageB"><%- card.pageB %></div>
                 </div>
                 <div class="back-menu d-flex justify-content-between align-items-center">
-                  <span id="rotate-back-rendered" class="nezobrazovat-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></span>
+                  <div id="rotate-back-rendered" class="nezobrazovat-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></div>
                   <div id="rotate-back-mobile-rendered" class="zobrazovat-jen-na-mobilu"><i class="fas fa-sync-alt fa-lg"></i></div>
                   <div>
                     <% if(sectionLength + 1 !== nextNum){ %>
@@ -174,7 +174,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
-      <script src="/js/card.js?chu"></script>
+      <script src="/js/card.js?ch"></script>
 </body>
 
 </html>
